--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,17 @@ input, select {
     font-weight: bold;
 }
 
+.login-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fefe;
+    text-decoration: none;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+    font-weight: bold;
+}
+
 .cta-button:hover {
     background-color: #0056b3;
 }
